0.15.1/_sources/_autosummary/baybe.recommenders.pure.nonpredictive.clustering.KMeansClusteringRecommender.rst.txt
KMeansClusteringRecommender
===========================

.. currentmodule:: baybe.recommenders.pure.nonpredictive.clustering

.. autoclass:: KMeansClusteringRecommender
   :members:                              
   :special-members: __call__
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~KMeansClusteringRecommender.__init__
   
      ~KMeansClusteringRecommender.recommend
   
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~KMeansClusteringRecommender.allow_recommending_already_measured
      ~KMeansClusteringRecommender.allow_recommending_pending_experiments
      ~KMeansClusteringRecommender.allow_repeated_recommendations
      ~KMeansClusteringRecommender.compatibility
      ~KMeansClusteringRecommender.model_cluster_num_parameter_name
      ~KMeansClusteringRecommender.model_params
      ~KMeansClusteringRecommender.supports_discrete_subset_generating_constraints
   
   